Full System Overhaul, Refactoring for ease of human readability, System Tray Integration repair, Methods relocated to better classes for continuity. Debug Console Log adjustments,